--- a/markup/style.css
+++ b/markup/style.css
@@ -1,5 +1,7 @@
 body {
 	background-color:whitesmoke;
+	line-height: 1.5;
+	margin-bottom: 50px;
 }
 p {
 	margin: 5px;
@@ -10,7 +12,7 @@ h1 {
 	font-size: 1.5em;
 }
 hr {
-	background-color: black;
+	background-color: grey;
 	height: 1px;
 	border: none;
 }
